# conan-liblinear

./: .travis.yml  CMakeLists.txt  README.md  conanfile.py
test_package/: conanfile.py  test_package.cpp
